--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,9 @@ license = "AGPL3"
 readme = "README.md"
 
 [tool.poetry.dependencies]
+fastapi = "^0.103.1"
 python = "^3.11"
-
+uvicorn = "^0.23.2"
 
 [build-system]
 requires = ["poetry-core"]
