--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 fastapi = "^0.103.1"
 python = "^3.11"
 uvicorn = "^0.23.2"
+langchain = "^0.0.327"
 
 [build-system]
 requires = ["poetry-core"]
