--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,11 @@ fastapi = "^0.103.1"
 python = "^3.11"
 uvicorn = "^0.23.2"
 langchain = "^0.0.327"
+pypdf = "^3.17.0"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.4.2"
+pytest-asyncio = "^0.21.1"
 
 [build-system]
 requires = ["poetry-core"]
