--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ python = "^3.11"
 uvicorn = "^0.23.2"
 langchain = "^0.0.327"
 pypdf = "^3.17.0"
+gensim = "^4.3.2"
+nltk = "^3.8.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.2"
